version: 4.12 - improve resource loading to handle resources from jar files - introduce maven profile to create uber artifact - fix bug in JpaTeamService to handle LeagueNotFoundException properly - refactor and reuse existing functionality in TeamServlet - handle all exceptions properly on web layer - get rid of request param mapping and handle deep json tree parsing - finish integration tests for TeamServlet