@@ -11,6 +11,12 @@ run app:
 export MAVEN_OPTS="--enable-preview -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005"
 mvn exec:java -Dexec.mainClass=org.richard.home.App
 mvn exec:exec -Dexec.executable=java -Dexec.args="-cp %classpath org.richard.home.App"
+java --enable-preview -jar target/dynamic-proxy-1.0-jar-with-dependencies.jar
+```
+
+create uber-jar:
+```
+mvn -Pfat-jar package
 ```
 
 tests:
